--- a/package.json
+++ b/package.json
@@ -42,18 +42,23 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@vercel/analytics": "latest",
+    "apache-arrow": "^14.0.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.24",
+    "googleapis": "^133.0.0",
     "input-otp": "1.4.1",
     "jszip": "latest",
     "lucide-react": "^0.454.0",
     "next": "16.0.0",
     "next-themes": "latest",
     "papaparse": "latest",
+    "parquetjs": "^0.11.2",
+    "pg": "^8.11.3",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
@@ -64,12 +69,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "3.25.76",
-    "parquetjs": "^0.11.2",
-    "apache-arrow": "^14.0.2",
-    "pg": "^8.11.3",
     "xlsx": "^0.18.5",
-    "googleapis": "^133.0.0"
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
@@ -77,9 +78,9 @@
     "@testing-library/react": "^14.0.0",
     "@types/node": "^22",
     "@types/papaparse": "^5.3.16",
+    "@types/pg": "^8.11.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/pg": "^8.11.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
